Fixed security filter for public endpoints such as signup and signin
