# src/main/java/com/example/ecommercedemo/auth/AuthController.java
@@ -1,21 +1,20 @@
-package com.example.ecommercedemo.user;
+package com.example.ecommercedemo.auth;
 
 import com.example.ecommercedemo.api.UserApi;
 import com.example.ecommercedemo.exception.InvalidRefreshTokenException;
 import com.example.ecommercedemo.model.RefreshToken;
 import com.example.ecommercedemo.model.SignInReq;
 import com.example.ecommercedemo.model.SignedInUser;
-import com.example.ecommercedemo.model.User;
+import com.example.ecommercedemo.model.SignUpReq;
+import com.example.ecommercedemo.user.UserEntity;
+import com.example.ecommercedemo.user.UserService;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.authentication.InsufficientAuthenticationException;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.web.bind.annotation.RestController;
-
-import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.userdetails.UsernameNotFoundException;
 
 import static org.springframework.http.ResponseEntity.*;
 
@@ -25,13 +24,15 @@ public class AuthController implements UserApi {
   private final UserService service;
   private final PasswordEncoder passwordEncoder;
 
+  private final Logger LOG = LoggerFactory.getLogger(getClass());
+
   public AuthController(UserService service, PasswordEncoder passwordEncoder) {
     this.service = service;
     this.passwordEncoder = passwordEncoder;
   }
 
   @Override
-  public ResponseEntity<SignedInUser> signUp(User user) {
+  public ResponseEntity<SignedInUser> signUp(SignUpReq user) {
     // 1. Validation (Input and Business Logic) is handled before or during the service call.
     // 2. The called service is guaranteed to return a SignedInUser (or throw an exception).
     return status(HttpStatus.CREATED).body(service.createUser(user));
@@ -39,10 +40,15 @@ public class AuthController implements UserApi {
 
   @Override
   public ResponseEntity<SignedInUser> signIn(SignInReq signInReq) {
+    LOG.info("SignIn Username: " + signInReq.getUsername());
     UserEntity userEntity = service.findUserByUsername(signInReq.getUsername());
+    LOG.info("SignIn UserEntity: " + userEntity);
     if (passwordEncoder.matches(signInReq.getPassword(), userEntity.getPassword())) {
+      LOG.info("Password matches");
+      LOG.info("Role: " + userEntity.getRole());
       return ok(service.getSignedInUser(userEntity));
     }
+    LOG.info("Password does NOT match");
     throw new InsufficientAuthenticationException("Unauthorized.");
   }
 
